--- a/js-dom/js-debouncing-throttling/index.html
+++ b/js-dom/js-debouncing-throttling/index.html
@@ -11,7 +11,7 @@
     <input type="text" placeholder="debouncing" onkeyup="getResult()">
     <br>
     <br>
-    <input type="text" placeholder="thortling" onkeyup="getResult()">
+    <input type="text" placeholder="thortling" onkeyup="getResult1()">
     <script src="./main.js"></script>
 </body>
 </html>
